--- a/programs.html
+++ b/programs.html
@@ -152,8 +152,7 @@
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(250, 250, 250);">
-    </div>
+    
    <div class="container">
         <div class="media-container-row">
             <div class="col-md-6 col-lg-6 block-content">
@@ -161,9 +160,9 @@
                     <div class="bg"></div>
                     <div class="form-wrap" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mentoring"><input type="hidden" name="email" data-form-email="true" value="5CGOOYpKoSaZHOFgQkGMtpYR1/OPHggZOjWGTBG97c/WHGw63hrqP4TLM9spZ+ZR7xWr2GwnNC4ZgbDXmOkKSFfpjn2OXxmF82ZbHyVThvhLbG2lQa/VAJ622QHdoFvm">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mentoring"><input type="hidden" name="email" data-form-email="true" value="IcHLfzGgum3Mu1xYUsMwZmIV88kYcLP8aLiVvv4DkGdKCLxUhupRp1xba3OGtcJXrPwflc1fzShwPXYEti8rktyVd/54yBxrP6pXffNY+yIX01syvIXUKxNi9LI1Hk2B">
 <div class="form-row">
-<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you, we will send you more information when it is available!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
 </div>
 </div>
@@ -263,7 +262,7 @@
                     <div class="bg"></div>
                     <div class="form-wrap" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Annual Reception List"><input type="hidden" name="email" data-form-email="true" value="rKr4Hu0EnjF8vzD/TeRWJnr3roBeMcWGWyr152SOxgH3v64KWIa2u/Tc9I5tDZSOUbbEHzBiiyC74CuUIASKPRTi4AgI9gkSFu1VfHNXX5QCtcj/UPMkkkSibboM/wGr">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Annual Reception List"><input type="hidden" name="email" data-form-email="true" value="EO+Hv5pm6oylc8Bvi3OHEYWJCYq8iIOUs5M8fZUxiMP2LyXQb1eW+zqYInC7J5IkHcCE6blSxvPBNLmioeNMU/CVFl3fjHcVW+KuK04nAFRS+0Zba2HOlQWtRmYZUQFW">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list! More details to come.</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -376,15 +375,15 @@
 
                 <div data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter"><input type="hidden" name="email" data-form-email="true" value="JrAuzKgb+ftaJfj0AqHUZyyNVy22lyLkevaMH2+i039DnJHfRZEIm/pvtPUAFsOTp1qfUlCBG9uta1YoehgBLRS51Xb39KUlg56tFNkd5pKNxXq+AJXJzHwMRzUlTHad">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Newsletter"><input type="hidden" name="email" data-form-email="true" value="3YO4oujlOLlNrALAyIIcFbeMGRBPeK3kaSXfBMqUFf4fO0+f6B595F4s5SBvRwXofIwrQ6i9FIA4WBTpzXvGRAforg0yRWH3KmENhdmikZFlzpzfzTuj5+gJlG079eR/">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
 </div>
 </div>
 <div class="dragArea row">
-<div class="col form-group" data-for="email">
-<input type="email" name="email" placeholder="Your e-mail" data-form-field="E-mail" class="form-control display-7" value="" id="email-extFooter25-1i">
+<div class="col form-group" data-for="">
+<input type="email" name="" placeholder="Your e-mail" data-form-field="" class="form-control display-7" value="">
 </div>
 <div class="col-auto mbr-section-btn">
 <button type="submit" class="btn btn-form btn-primary display-4">Subscribe</button>
