--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 
                 <div class="form1 px-3" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="newsletter"><input type="hidden" name="email" data-form-email="true" value="drBCu2faebXszxOmEWiZJB/BvxGV8E5k/k5TsDwAdfY6ruy93tB/F2KZ6AluHuxE2cEJTV2Fz1VH6JsvWXoWD5MiEkCR0OACpceR8otmoXpHpbUZeVPWIeQgt0fJTD/d">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="newsletter"><input type="hidden" name="email" data-form-email="true" value="nlqFWArJIFXS7QeleOKvLUYB6q9IcCUREFUtlB9aec8h3ehre/ycoL9DQqWmYB6hVzTaYm41Mp9UJNMB0gFSpC0RBXln+veQpxLXlSZ73FhdiV60tFJPVtqN+gyTZVe9">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -176,7 +176,7 @@
     </div>
 </section>
 
-<div class="modal mbr-popup cid-scbObIuMz4 fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.7" data-on-timer-delay="1" id="mbr-popup-16" aria-hidden="true">
+<div class="modal mbr-popup cid-scbObIuMz4 fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.4" data-on-timer-delay="1" id="mbr-popup-16" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -189,12 +189,12 @@
                 </div>
 
                 <div class="modal-body">
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        Women in Measurement, Inc. stands with the Black Lives Matter movement. The fight against racism must be pursued in every area of our society. Women in Measurement, Inc. was founded with the mission of advancing racial and gender equity in the field of educational measurement.&nbsp;&nbsp;</p>
+                    <p class="mbr-text mbr-fonts-style display-4">
+                        Women in Measurement, Inc. stands with the Black Lives Matter movement. The fight against racism must be pursued in every area of our society. Women in Measurement, Inc. was founded with the mission of advancing racial and gender equity in the field of educational measurement.&nbsp;<br></p>
 
                     <div>
                         <div class="card-img mbr-figure">
-                            <img src="assets/images/blm-802x799.png" alt="">
+                            <img src="assets/images/blm-white-small-936x604.jpeg" alt="">
                         </div>
                             
 
