--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
                             </p>
                             <div class="social-row display-7">
                                 <div class="soc-item">
-                                    <a href="https://www.linkedin.com/in/sgillmor/" target="_blank">
+                                    <a href="http://www.linkedin.com/in/susanclyons" target="_blank">
                                         <span class="mbr-iconfont socicon-linkedin socicon"></span>
                                     </a>
                                 </div>
@@ -380,7 +380,7 @@
                 
                 <div class="form1 px-3" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="newsletter"><input type="hidden" name="email" data-form-email="true" value="6Hg042+snASjyq7YFJMGdwjV1Ys7v+q+4Ms1bja26dQmE7RzNEIjd2mas8tVugSTnpXXsz0UGpcpdPYlVTimbhQnoahNNoI9vJilWkCUu8r/u29cHXHJrm5lfFriBm6Q">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="newsletter"><input type="hidden" name="email" data-form-email="true" value="0XkVIWl2jGNEHhMsyxY4xpTLYZLlCZAkHWaWzYbFCPD8PzJNGwzkKh90xFNSimw1ZatbQgSdPKoIKnnAs1RJL0YRDDUnHt+kHHuZ60LYRU5j2kYRRZ/5rKd+NjdJ+42/">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
