--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
                                     </a>
                                 </div>
                                 <div class="soc-item">
-                                    <a href="https://twitter.com/SusanLyons_" target="_blank">
+                                    <a href="https://twitter.com/susanclyons" target="_blank">
                                         <span class="mbr-iconfont socicon-twitter socicon"></span>
                                     </a>
                                 </div>
@@ -380,7 +380,7 @@
                 
                 <div class="form1 px-3" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="newsletter"><input type="hidden" name="email" data-form-email="true" value="csgKP17XLhlp2SGyXCRSemScvzI/7E1V4mTPJXgN/o6MjSwpCk5pBh2vNIQFhHqi+/NgVhf+NNXzAvVVGP5kr6r8Ig1+2IRXN/weBvoM9iqCHBwhK3XQVTqrKRql+JlU">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="newsletter"><input type="hidden" name="email" data-form-email="true" value="OanM7WpBPC+aYPi+M/kgvSBsFdOotYrUo3+rWUwL9Zf3/G1SVGp/y55lOBVuQ2VKpFSHF4zX15voPddmFTrEgS/jIU4+pdX94TOEDe+VbS3HFm3gtrI/474xcMG4fzD3">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
