--- a/about.html
+++ b/about.html
@@ -232,7 +232,7 @@
                                 <strong>Fiona Hinds</strong></h5>
                             <h6 class="mbr-fonts-style mb-3 display-4">
                                 <strong>Chief Strategy Officer</strong></h6>
-                            <p class="mbr-text mbr-fonts-style display-7">Fiona is the Senior Vice President of Client Services at Cognia. Fiona is an equity advocate with extensive experience in leadership, education management and improvement systems for schools, districts and state education agencies. Her expertise includes school quality, urban education, equity in STEM, and strategic planning. At Cognia, Fiona has been instrumental in supporting diversity, equity, and inclusion as guiding principles in delivery services, including within the assessment division. <br></p>
+                            <p class="mbr-text mbr-fonts-style display-7">Fiona is the Senior Vice President of Client Services at Cognia. Fiona is an equity advocate with extensive experience in leadership, education management and improvement systems for schools, districts and state education agencies. Her expertise includes school quality, urban education, equity in STEM, and strategic planning. At Cognia, Fiona has been influential in supporting diversity, equity, and inclusion as guiding principles in delivery services, including within the assessment division. <br></p>
                             <div class="social-row display-7">
                                 <div class="soc-item">
                                     <a href="https://www.linkedin.com/in/fiona-hinds-ed-d-825124b0/" target="_blank">
@@ -427,7 +427,7 @@
                 
                 <div class="form1 px-3" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="newsletter"><input type="hidden" name="email" data-form-email="true" value="zoqRo5Azezp+8q+YHavysaeESNXFmwV8pBXbwV4h37LetlUFAth2LSQtiAdn28EuB3W45gH2g2G5LQswDfAsYUepkdPGdDrmVkML2XNygalmVqiSyUlCAoMDWjROXluX">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="newsletter"><input type="hidden" name="email" data-form-email="true" value="sGM8NRS9l8M0pZiCclaaX11803noVrZJc8mEAHOF2ctJU1rOiT7AIFP1tV/QA0JhHDnSg2Kryvof3d7VsHxJOzVRN2gTJ67gJaDGK2Yvl/rwY2KcFlHWBkXvNHgSaPdU">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
