--- a/programs.html
+++ b/programs.html
@@ -13,9 +13,9 @@
   <title>Programming</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
-  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
+  <link rel="stylesheet" href="assets/Material-Design-Icons/css/material.css">
   <link rel="stylesheet" href="assets/icon54-v2/style.css">
-  <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="assets/FontAwesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -91,14 +91,14 @@
 	<div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(239, 239, 239);">
 	</div>
 	<div class="container">
-		<h2 class="mbr-fonts-style mbr-section-title align-center display-1">Programming</h2>
+		<h2 class="mbr-fonts-style mbr-section-title align-center display-2">Programming</h2>
 		<h3 class="mbr-fonts-style mbr-section-subtitle align-center mbr-light pt-3 display-5 mb-3">Women in Measurement, Inc. hosts a number of initiatives aimed at advancing the careers of women in educational measurement, with particular focus on supporting women of color in our field.<br><br></h3>
 
 		<div class="row justify-content-left pt-5">
 			<div class="col-md-6 row-item col-lg-4">
 				<div class="wrapper">
 					<div class="card-img pb-3 align-left">
-						<a href="page2.html#content6-z"><span class="mbr-iconfont mdi-social-people-outline"></span></a>
+						<span class="mbr-iconfont mdi-social-people-outline"></span>
 					</div>
 					<h4 class="mbr-fonts-style mbr-card-title align-left pb-2 display-5"><a href="page2.html#content6-z" class="text-black">Mentoring</a></h4>
 
@@ -109,7 +109,7 @@
 			<div class="col-md-6 row-item col-lg-4">
 				<div class="wrapper">
 					<div class="card-img pb-3 align-left">
-						<a href="page2.html#content6-10"><span class="mbr-iconfont icon54-v2-presentation-3"></span></a>
+						<span class="mbr-iconfont icon54-v2-presentation-3"></span>
 					</div>
 					<h4 class="mbr-fonts-style mbr-card-title align-left pb-2 display-5"><a href="page2.html#content6-10" class="text-black">Speaker Series</a></h4>
 
@@ -141,7 +141,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="m2QvUJRX6PcHrqfJvyewQbPSzHGz1bt/iRTW/HNxoGeSvFUcgexEOklBXKGkm2XfyESWf93DJA+nd6Z0AbWCGan/6iD/Cznqa15W9OnBypxX6jkXi2NsEtCmL2F5Xquv">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gZHD7yxwJSTY4xJoWVW7TGy2I4rzdAiYCLJIlwfMox+X6zduDbjvGh5ZLkDAepjtOxZn8MFsiDPksGZYp4XhE8EAXPvKrZiev2mfidcxgmOx+Jbn5F2Qjgp9hMZ7dx/h.P4WW/82ykT9H1s919GJ06LfGREEQZFH2akPMtlOoRg+TDD/5oAhCd6ePm/sOPJBam8Hj8HkvV69QSkqXiPy5w7l/+WL/BIng2YfRPxKjUAoRBvGdwhZoTVYh6D+UwK9j">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
