--- a/programs.html
+++ b/programs.html
@@ -100,7 +100,7 @@
 					<div class="card-img pb-3 align-left">
 						<span class="mbr-iconfont mdi-social-people-outline"></span>
 					</div>
-					<h4 class="mbr-fonts-style mbr-card-title align-left pb-2 display-5"><a href="page2.html#content6-z" class="text-black">Mentoring</a></h4>
+					<h4 class="mbr-fonts-style mbr-card-title align-left pb-2 display-5">Mentoring</h4>
 
 					<p class="mbr-text mbr-fonts-style align-left display-7">Connect directly with women leaders in our field. Our mentoring program is designed to support women at all stages of their careers.</p>
 				</div>
@@ -111,7 +111,7 @@
 					<div class="card-img pb-3 align-left">
 						<span class="mbr-iconfont icon54-v2-presentation-3"></span>
 					</div>
-					<h4 class="mbr-fonts-style mbr-card-title align-left pb-2 display-5"><a href="page2.html#content6-10" class="text-black">Speaker Series</a></h4>
+					<h4 class="mbr-fonts-style mbr-card-title align-left pb-2 display-5">Speaker Series</h4>
 
 					<p class="mbr-text mbr-fonts-style align-left display-7">Coordinated sessions at professional conferences related to the intersection of women's issues, race, and educational measurement.</p>
 				</div>
@@ -122,7 +122,7 @@
 					<div class="card-img pb-3 align-left">
 						<span class="mbr-iconfont mbrib-calendar"></span>
 					</div>
-					<h4 class="mbr-fonts-style mbr-card-title align-left pb-2 display-5"><a href="page2.html#content6-11" class="text-black">Networking Events</a></h4>
+					<h4 class="mbr-fonts-style mbr-card-title align-left pb-2 display-5">Networking Events</h4>
 					<p class="mbr-text mbr-fonts-style align-left display-7">Join us at our annual reception for conversation and networking with women in our field. Our Leadership Award is also presented at this event.<br></p>
 				</div>
 			</div>
@@ -141,7 +141,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gZHD7yxwJSTY4xJoWVW7TGy2I4rzdAiYCLJIlwfMox+X6zduDbjvGh5ZLkDAepjtOxZn8MFsiDPksGZYp4XhE8EAXPvKrZiev2mfidcxgmOx+Jbn5F2Qjgp9hMZ7dx/h.P4WW/82ykT9H1s919GJ06LfGREEQZFH2akPMtlOoRg+TDD/5oAhCd6ePm/sOPJBam8Hj8HkvV69QSkqXiPy5w7l/+WL/BIng2YfRPxKjUAoRBvGdwhZoTVYh6D+UwK9j">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="H/StYpx1kfpPlMwZsKLUMSrgoOpqAQyhmV4VqvHUxCmGo5dhcVM5l8s2lwJ761mXfRpChNUnIjxltnK+0DKhe7Jg8xyYZ5EvhZF+4xy7XoOaMAKlXRPlI5weqUKgXxyY.4jBb7mi51OfVZsQ021Aze7KSdQYIchW1tPuYC/jLTxJQCvFTtDmJ1yw6OvRb1Fxo09mDkQkhgYxujRyCmCBdupbarRBv3Q5e0CHK+hEF0Okm042a8WB1B5z8yH5EVin3">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">You're on the list!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
