--- a/partners.html
+++ b/partners.html
@@ -265,7 +265,7 @@
                             </div>                            
                         </div>
                         <div class="right-side col-12 col-lg-6 item-wrapper">
-                            <p class="mbr-text text mbr-fonts-style display-7">We are indebted to the many individuals who have generously donated in support of our organization. These donors include:<br><br>-Suzanne Lane<br>-Catherine Taylor<br>-Andrew Ho<br>-Phoebe Winter<br></p>
+                            <p class="mbr-text text mbr-fonts-style display-7">We are indebted to the many individuals who have generously donated in support of our organization. These donors include:<br><br>-Emily Ho<br>-Suzanne Lane<br>-Catherine Taylor<br>-Andrew Ho<br>-Phoebe Winter<br></p>
                         </div>
                     </div>                                     
                 </div>
